commit all changes